# ai-commander

./: .env.example  .mcp.json  README.md  config.yaml  package-lock.json  package.json  pyproject.toml  roles.yaml  start-windows-mcp.bat  tsconfig.json
adapters/: base_adapter.py  claude_adapter.py  gemini_adapter.py  grok_adapter.py  ollama_adapter.py  openai_adapter.py
src/: aggregator.ts  cli.ts  config-loader.ts  config.ts  dispatcher.ts  index.ts  mcp-server.ts  orchestrator.ts  types.ts
src/tools/: win-ai-chat.ts  win-control.ts  win-snapshot.ts
src/windows/: browser-automation.ts  mcp-client.ts
tests/: aggregator.test.ts  config-loader.test.ts  dispatcher.test.ts  orchestrator.test.ts  types.test.ts
tests/adapters/: base_adapter_test.py
