[project]
name = "ai-commander-adapters"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.39.0",
  "openai>=1.0.0",
  "google-generativeai>=0.8.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
